[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/Environmental/woman_laugh.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Textures/Models/ghost.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/Idle/wood_walk.wav" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SphereShape" id=2]
radius = 20.0

[sub_resource type="BoxShape" id=3]

[node name="Enemy" type="KinematicBody"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.126, 0, -2.62268e-09, 0, 0.24, 0, -3.93403e-09, 0, 0.144, 0, 1, 0 )
shape = SubResource( 1 )

[node name="PlayerDetect" type="Area" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="PlayerDetect"]
shape = SubResource( 2 )

[node name="DamageArea" type="Area" parent="."]
transform = Transform( -1.39091e-08, 0, -1, 0, 1, 0, 1, 0, -1.39091e-08, 5.96046e-08, 0, -5.96046e-08 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="DamageArea"]
transform = Transform( 0.881736, 0, -2.44784e-08, 0, 0.7, 0, -3.08335e-08, 0, 1.26, -1.27817, 0.0434651, 0.0419129 )
shape = SubResource( 3 )

[node name="JumpScareTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AttackTimer" type="Timer" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
opacity = 0.5
texture = ExtResource( 3 )

[node name="Footsteps" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
stream = ExtResource( 4 )
unit_db = 20.0
autoplay = true

[node name="Jumpscare" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 20.0

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_PlayerDetect_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="timeout" from="JumpScareTimer" to="." method="_on_JumpScareTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="DamageArea" method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
